# lumi-plus

./: .gitignore  README.md  index.css  index.html  index.js  state_config-20200927.json
LTSlw/: README.md  去除UAC弹窗.md
LTSlw/model.dd/: README.md  model.dd  model.dd详解.md  model_change.dd  model_change_plus.dd  model_dec  model_dec_change.json  model_dec_change_plus.json  model_dec_format.json  model_dec_format_change.json  model_dec_format_change_plus.json
LTSlw/model.dd/20200830/: model.dd  model_change.dd  model_dec.json  model_dec_change.json  model_dec_format.json  model_dec_format_change.json
LTSlw/model.dd/20200904/: model.dd  model_change.dd  model_dec.json  model_dec_change.json  model_dec_format.json  model_dec_format_change.json
LTSlw/scpieces/: README.md  lumi(ndf decrypt,from bili).py
LTSlw/scpieces/EnableInteract/: EnableInteract.cpp  EnableInteract.sln  EnableInteract.vcxproj  EnableInteract.vcxproj.filters
LTSlw/scpieces/ReadOnlySet/: ReadOnlySet.cpp  ReadOnlySet.sln  ReadOnlySet.vcxproj  ReadOnlySet.vcxproj.filters
LTSlw/scpieces/SetWallpaper/: SetWallpaper.cpp  SetWallpaper.sln  SetWallpaper.vcxproj  SetWallpaper.vcxproj.filters
LTSlw/scpieces/UpGround/: UpGround.cpp  UpGround.sln  UpGround.vcxproj  (+1 more)
LTSlw/state_config.json/: state_config.json  state_config_format.json
WebAdd/: index.html
crypto/: CMakeLists.txt  main.cc
crypto/Qt-AES/aesni/: aesni-enc-cbc.h  aesni-enc-ecb.h  aesni-key-exp.h
ky-bd/: README.md  index.css  index.js  model-20200927.json  model-20200928-mod.dd
ky-bd/crypto/: CMakeLists.txt  main.cc
(+21 files in other folders)
